@@ -1,3 +1,9 @@
+2014-05-14  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
+	Fix writing to the main (default) region when other regions are
+	defined.
+
 2014-05-13  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
